--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">My First App</string>
+    <string name="app_name">Debruijn Map App</string>
+    <string name="edit_message">Print Debruin Graph</string>
+    <string name="button_send">Send</string>
+    <string name="test">TCGCACTCAACGCCCTGCATATGACAAGACAGAATC</string>
 </resources>
